# rag-knowledge-base

./: .env.example  .gitignore  AUTOSTART.md  DEPLOY_STATUS.md  FULL_TEST_REPORT.md  README.md  README_CLI.md  WATCHER_IMPLEMENTATION.md  mcp-config.json  nginx-rag.conf  pyproject.toml  requirements.txt  start_watcher_daemon.py
.project/: BUGFIX_SUMMARY.md  bug-fix-progress.md  requirements.md  tech-design.md
db/: .gitkeep  metadata.db-shm
docs/: API.md  IMPLEMENTATION_PLAN.md  MCP_SETUP.md  MEMORY_UPGRADE_PLAN.md  PRACTICAL_UPGRADE_PLAN.md  WEB_UI_DESIGN.md  artifact-versioning-design.md  chunk-metadata-association.md  code-location-enhancement.md  content-metadata-extraction.md  metadata-extraction-design.md
reports/: sync_report_20260406.md  sync_report_20260407.md  sync_report_20260408.md  sync_report_20260409.md  sync_report_20260410.md  sync_report_20260411.md  sync_report_20260412.md  sync_report_20260413.md  sync_report_20260414.md  sync_report_20260415.md  sync_report_20260416.md  sync_report_20260417.md  sync_report_20260418.md  sync_report_20260419.md  sync_report_20260420.md  sync_report_20260421.md  sync_report_20260422.md  sync_report_20260423.md  sync_report_20260424.md  sync_report_20260425.md  sync_report_20260426.md  sync_report_20260427.md  sync_report_20260428.md
scripts/: check_vector_integrity.py  extract_go_comments.go  gen_hash.py  mineru.sh  mineru_processor.py  package-lock.json  rebuild_yunxi.py  reindex_yunxi_office.py  service.sh  setup.sh  start-all.sh  start-qdrant.sh  test_consistency.py  test_system.py  test_unstructured.py  ts_comments.js
src/: __init__.py
src/cli/: api_client.py  commands.py  config.py  main.py  utils.py
src/cli/commands/: __init__.py  auth.py  document.py  project.py  search.py  service.py  system.py  watcher.py
src/core/: bm25_index.py  chunker.py  comment_extractor.py  document_processor.py  embedding.py  hierarchical_index.py  reranker.py  unstructured_parser.py  vector_store.py
src/mcp/: server.py
src/rag_api/: __init__.py  auth.py  config.py  dependencies.py  main.py
src/rag_api/models/: database.py  schemas.py
src/rag_api/routers/: auth.py  documents.py  projects.py  search.py  watcher.py
src/services/: document_service.py  ingest_service.py  project_service.py  search_service.py
src/watcher/: __init__.py  gitignore.py  handler.py  manager.py  sync.py
test_docs/: architecture.md  test_presentation.pptx  test_system.xlsx
tests/: test_bugfixes.py
