[project]
name = "rag-knowledge-base"
version = "0.1.0"
description = "本地知识库RAG系统 - 支持多项目管理"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Coder", email = "coder@example.com"}
]
keywords = ["rag", "knowledge-base", "vector-search", "local-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",

    # Vector Database
    "qdrant-client>=1.12.0",
    
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    
    # Document Processing
    "mineru>=0.1.0; python_version < '3.14'",  # Python 3.14需测试兼容性
    "unstructured[all-docs]>=0.16.0",
    "markdown>=3.7",
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    
    # Embedding / LLM
    "ollama>=0.4.0",
    "openai>=1.55.0",  # For Ollama compatible API
    
    # Search & NLP
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",  # 中文分词
    "scikit-learn>=1.5.0",
    
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    
    # CLI
    "typer>=0.13.0",
    "rich>=13.9.0",
    
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "watchdog>=6.0.0",
    "pathspec>=0.12.0",  # .gitignore 解析
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

web = [
    "streamlit>=1.40.0",
]

[project.scripts]
rag = "src.cli.commands:main"
rag-server = "src.rag_api.main:main"
rag-mcp = "src.mcp.server:main"
ragctl = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/rag-knowledge-base"
Repository = "https://github.com/yourusername/rag-knowledge-base"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
